@@ -931,7 +931,11 @@ enum
     DW_LLE_GNU_end_of_list_entry = 0x0,
     DW_LLE_GNU_base_address_selection_entry = 0x1,
     DW_LLE_GNU_start_end_entry = 0x2,
-    DW_LLE_GNU_start_length_entry = 0x3
+    DW_LLE_GNU_start_length_entry = 0x3,
+
+    // http://www.fsfla.org/~lxoliva/papers/sfn/dwarf6-sfn-lvu.txt
+    // https://dwarfstd.org/ShowIssue.php?issue=170427.1
+    DW_LLE_GNU_view_pair = 0x9
   };
 
 /* DWARF5 package file section identifiers.  */
