@@ -1,3 +1,7 @@
+2022-10-19  Mark Wielaard  <mark@klomp.org>
+
+	* dwarf.h (DW_LLE_GNU_view_pair): New constant.
+
 2022-10-21  Yonggang Luo  <luoyonggang@gmail.com>
 
 	* memory-access.h: Include system.h instead of byteswap.h and
